force-app/main/default/objects/FEC_Insurance_Info__c/FEC_Insurance_Info__c.object-meta.xml
<CustomObject>
    <description>Thông tin sản phẩm bảo hiểm</description>
    <label>Insurance Info</label>
    <nameField>
        <label>Insurance Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>