force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Agent_Code__c</fullName>
    <label>Agent Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>