force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Buyer_DOB__c.field-meta.xml
<CustomField>
    <fullName>FEC_Buyer_DOB__c</fullName>
    <description>Ngày sinh</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>