force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Buyer_Gender__c.field-meta.xml
<CustomField>
    <fullName>FEC_Buyer_Gender__c</fullName>
    <label>Buyer Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender</valueSetName>
    </valueSet>
</CustomField>