force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Buyer_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Buyer_Name__c</fullName>
    <description>Họ và Tên</description>
    <label>Buyer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>