force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Buyer_NID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Buyer_NID__c</fullName>
    <description>Số CMND/ CCCD</description>
    <label>Buyer NID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>