force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Customer_History__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_History__c</fullName>
    <label>Customer History</label>
    <referenceTo>FEC_Customer_History__c</referenceTo>
    <relationshipLabel>Insurance Info</relationshipLabel>
    <relationshipName>Insurance_Info</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>