force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>