force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Insurer_Company__c.field-meta.xml
<CustomField>
    <fullName>FEC_Insurer_Company__c</fullName>
    <label>Insurer Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>