force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Payment_ID__c</fullName>
    <label>Payment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>