force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Phone_number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Phone_number__c</fullName>
    <label>Phone number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>