force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Policy_Number__c</fullName>
    <label>Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>