force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Premium_Fee__c.field-meta.xml
<CustomField>
    <fullName>FEC_Premium_Fee__c</fullName>
    <description>Phí bảo hiểm</description>
    <label>Premium Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>