force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Product_Name__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>