force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Sale_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sale_Channel__c</fullName>
    <label>Sale Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>