force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Status__c</fullName>
    <description>Tình trạng hợp đồng</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>