force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_Sub_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Channel__c</fullName>
    <label>Sub Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>