force-app/main/default/objects/FEC_Insurance_Info__c/fields/FEC_User_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_User_ID__c</fullName>
    <description>Mã hồ sơ</description>
    <label>User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>